--- a/fumadocs/registry/hooks/use-intersection-observer/index.mdx
+++ b/fumadocs/registry/hooks/use-intersection-observer/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Use Intersection Observer
+title: use-intersection-observer
 description: A hook to check if an element is intersecting with the viewport
 ---
 
