--- a/fumadocs/registry/hooks/use-fcm/index.mdx
+++ b/fumadocs/registry/hooks/use-fcm/index.mdx
@@ -9,8 +9,8 @@ description: A hook to handle Firebase Cloud Messaging, including token manageme
 
 ### Notice
 
-- Please move `_public/firebase-messaging-sw.js` from `src/public` to `public` folder manually.
-- Please replace `firebaseConfig` in `@utils/fcm/index.ts` with your own Firebase configuration.
+- Please move `firebase-messaging-sw.js` from `src/public` to `public` folder manually.
+- Please replace `firebaseConfig` in `use-fcm/helper.ts` with your own Firebase configuration.
 
 ```ts
 const firebaseConfig = {
